--- a/files/books.html
+++ b/files/books.html
@@ -11,12 +11,17 @@
 <!-- *****headers*********}}} --> 
 
 -Currently reading...  <i>William Shakespeare's Star Wars: Verily, A New Hope</i>, by Ian Doescher. <br><br>
-
+<a href="#2020">2020</a>
+<a href="#2019">2019</a>
+<a href="#2018">2018</a>
+<a href="#2017">2017</a>
+<a href="#2016">2016</a>
+<a href="#2015">2015</a>
+<a href="#2014">2014</a>
+<a href="#2013">2013</a>
+<a href="#2012">2012</a>
 <!-- *****books_2020**********{{{ -->
-<!-- *****books_2020_code*****{{{ -->
-<h4><a href="#last" onclick="toggle('books_2020')">2020</a></h4>
-<ul id="books_2020" style="display:none"><!2020><br><br>
-<!-- books 2020 code*****}}} -->
+<h4><a id="2020" >2020</a></h4>
 -<font size="4"><i> A mathematician's lament</i></font>, by Paul Lockhart (book)<br><br>
 -<font size="4"><i> De vita beata</i></font>, de Séneca<br><br>
 -<font size="4"><i> The Black Swan</i></font>, by Nassim Nicholas Taleb<br><br>
@@ -35,13 +40,10 @@
 -<font size="4"><i> La hija de Vercingetórix</i></font>, de Jean-Yves Ferri y Didier Conrad<br><br>
 -<font size="4"><i> The Vital Question</i></font>, by Nick Lane<br><br>
 -<font size="4"><i> The Way of Zen</i></font>, by Alan W. Watts<br><br>
-<br><br></ul><!2020>
+<br><br>
 <!-- *****books_2020*********}}} --> 
 <!-- *****books_2019**********{{{ -->
-<!-- *****books_2019_code*****{{{ -->
-<h4><a href="#last" onclick="toggle('books_2019')">2019</a></h4>
-<ul id="books_2019" style="display:none"><!2019><br><br>
-<!-- books 2019 code*****}}} -->
+<h4><a id="2019" >2019</a></h4>
 -<font size="4"><i> Sapiens, a brief history of humankind</i></font>, by Yuval Noah Harari<br><br>
 -<font size="4"><i> The Three-Body Problem</i></font>, by Cixin Liu<br><br>
 -<font size="4"><i> How not to be wrong</i></font>, by Jordan Ellenberg<br><br>
@@ -55,13 +57,10 @@
 -<font size="4"><i> Mozart in the Jungle</i></font>, by Blair Tindall <br><br>
 -<font size="4"><i> Quiet</i></font>, by Susan Cain<br><br>
 -<font size="4"><i> Wherever you go, there you are</i></font>, by Jon Jabat-Zinn <br><br>
-<br><br></ul><!2019>
+<br><br>
 <!-- *****books_2019*********}}} --> 
 <!-- *****books_2018*****{{{ -->
-<!-- *****books_2018_code*****{{{ -->
-<h4><a href="#last" onclick="toggle('books_2018')">2018</a></h4>
-<ul id="books_2018" style="display:none"><!2018><br><br>
-<!-- *****books 2018 code*****}}} -->
+<h4><a id="2018">2018</a></h4>
 -<font size="4"><i> Take Control of the Noisy Class</i></font>, by Rob Plevin <br><br>
 -<font size="4"><i> Muerte con pingüino</i></font>, de Andrei Kurkov <br><br>
 -<font size="4"><i> Caves of Steel</i></font>, by Isaac Asimov <br><br>
@@ -74,11 +73,9 @@
 -<font size="4"><i> The Shallows: what the internet is doing to our brains</i></font>, by Nicholas Carr <br><br>
 -<font size="4"><i> The Mathematics of Love: Patterns, Proofs, and the Search for the Ultimate Equation</i></font>, by Hannah Fry <br><br>
 <br><br>
-</ul><!2018>
 <!-- *****books_2018*****}}} --> 
 <!--*****books_2017**********{{{-->
-<h4><a href="#last" onclick="toggle('books_2017')">2017</a></h4>
-<ul id="books_2017" style="display:none"><!2017><br><br>
+<h4><a id="2017">2017</a></h4>
 -<font size="4"><i> The Subtle Art of Not Giving a Fuck</i></font>, by Mark Manson <br><br>
 -<font size="4"><i> Tau zero</i></font>, by Poul Anderson. <br><br>
 -<font size="4"><i> 1984</i></font>, by George Orwell. <br><br>
@@ -99,11 +96,9 @@
 
 -<font size="4"><i>Foundation</i></font>, by James Lovelock. <br><br>
 <br><br>
-</ul><!2017>
 <!-- *****books_2017*********}}} --> 
 <!-- *****books_2016*****{{{ -->
-<h4><a href="#last" onclick="toggle('books_2016')">2016</a></h4>
-<ul id="books_2016" style="display:none"><!2016><br><br>
+<h4><a id="2016">2016</a></h4>
 -<font size="4"><i>Gut: The Inside Story of Our Body's Most Underrated Organ</i></font>, by Giulia Enders. <br><br>
 -<font size="4"><i>The vanishing face of Gaia</i></font>, by James Lovelock. <br><br>
 -<font size="4"><i>Ahsoka</i></font>, by E.K. Johnston. <br><br>
@@ -114,11 +109,9 @@
 -<font size="4"><i>Fahrenheit 451</i></font>, by Ray Bradbury.<br> <br>
 -<font size="4"><i>Congo</i></font>, by Michael Crichton. <br><br>
 <br><br>
-</ul><!2016>
 <!-- *****books_2016*********}}} --> 
 <!-- *****books_2015*****{{{ -->
-<h4><a href="#last" onclick="toggle('books_2015')">2015</a></h4>
-              	<ul id="books_2015" style="display:none"><!2015><br>
+<h4><a id="2015" >2015</a></h4>
 
 -<font size="4"><i>Fleet:the complete collection</i></font>, by Andrew D. Thaler.<br><br>
 -<font size="4"><i>Prepared</i></font>, by Andrew D. Thaler.<br><br>
@@ -127,11 +120,9 @@
 -<font size="4"><i>Good food for everyone forever</i></font>, by Colin Tudge.<br><br>
 -<font size="4"><i>Love and Math: The Heart of Hidden Reality</i></font>, by Edward Frenkel .<br><br>
 -<font size="4"><i>Alan Turing, the Enigma</i></font>, by Andrew Hodges .<br><br>
-</ul><!2015>
 <!-- *****books_2015*********}}} --> 
 <!-- *****books_2014*****{{{ -->
-<h4><a href="#last" onclick="toggle('books_2014')">2014</a></h4>
-              	<ul id="books_2014" style="display:none"><!2014><br>
+<h4><a id="2014" >2014</a></h4>
 -<font size="4"><i>What Do You Care What Other People Think?</i></font>, by Richard Feynman.<br><br>
 -<font size="4"><i>Zorba the Greek</i></font>, by Nikos Kazantzakis.<br><br>
 -<font size="4"><i>The Now Habit</i></font>, by Neil Fiore.<br><br>
@@ -160,11 +151,9 @@ Esta es de momento la &uacute;ltima obra de Lope que me leo tras una larga devoc
 Una obra magn&iacute;fica llena de toques morales pero hechos con bastante gracia. Casi una utop&iacute;a el pensar en un hombre con tanta integridad y en una mujer capaz de verla y apreciarla... Muy entretenida y llena de versos sublimes y verdades como pu&ntilde;os. La historia de dos hermanos diferentes como la noche y el d&iacute;a, lejanos entre s&iacute; por una inmensidad. 
 (<a href="http://www.cervantesvirtual.com/obra-visor/las-flores-de-don-juan-y-rico-y-pobre-trocados-comedia-famosa--0/html/ffa88a44-82b1-11df-acc7-002185ce6064.htm" target=_blank>Enlace</a> a Cervantes Virtual.)
 <br><br>
-</ul><!2014>
 <!-- *****books_2014*********}}} --> 
 <!-- *****books_2013**********{{{ -->
-<h4><a href="#last" onclick="toggle('books_2013')">2013</a></h4>
-<ul id="books_2013" style="display:none"><!2013><br>
+<h4><a id="2013">2013</a></h4>
 
 -<font size="4"><i>The selfish gene</i></font>, by Richard Dawkins.
 Well, this is one of the most intelligent science books I have ever read. Its position as a sience classic is well justified. It is extremely well written and it keeps its engaging prose even through some tough and dense discussions. But the important thing is that this book has made me think a lot. The perspective of the gene is fascinating, and its implications for concepts such as altruism, cooperation or even deception is far reaching. There is one negative thing, however: the machine is put under its proper role. I think there is more to say about machines. Genes are hugely important players, but to me are dead entities. I will soon publish a text on this topic, so keep it tuned with the publications section! And read this amazing book as soon as possible!
@@ -260,11 +249,9 @@ Un ejemplo de hasta d&oacute;nde puede alguien autohumillarse para perseguir a s
 <br><br>
 -<font size="4"><i>Los Melindres de Belisa</i></font>, by Lope de Vega. Belisa es un personaje para volverse loco. De esos que adoras en escena pero al que odiar&iacute;s en la vida real. La obra est&aacute; llena de enga&ntilde;os y equ&iacute;vocos. La oscuridad final es buen&iacute;sima. 
 (<a href="http://www.cervantesvirtual.com/obra/la-dama-melindrosa/" target=_blank>Enlace</a> de la Biblioteca Virtual Miguel de Cervantes).
-</ul><!2013>
 <!-- *****books_2013*********}}} --> 
 <!-- *****books_2012*****{{{ -->
-<h4><a href="#last" onclick="toggle('books_2012')">2012</a></h4>
-<ul id="books_2012" style="display:none"><!2012><br>
+<h4><a id="2012" >2012</a></h4>
 
 -<font size="4"><i>Por la puente, Juana</i></font>, by Lope de Vega. Una obra de costumbres, amor y honor. Los protagonistas viven como
 personajes dentro de otros, huyendo de su pasado m&aacute;s reciente.
@@ -385,7 +372,6 @@ la forma en que se odian los novios nada m&aacute;s verse. &iexcl;Cu&aacute;ntas
 -<font size="4"><i>Las Famosas Asturianas</i></font>, de Lope de Vega. Si ya conoces las andaduras de Sancho Panza es hora de ver en acci&oacute;n a Do&ntilde;a Sancha, una hero&iacute;na incre&iacute;blemente moderna. Es muy interesante leer a Lope en un castellano que ya para &eacute;l era (quiz&aacute;s ir&oacute;nicamente) antiguo. (L&eacute;ela <a href="http://www.cervantesvirtual.com/obra-visor/las-famosas-asturianas-comedia--1/html/" target=_blank>aqu&iacute;</a> en html).<br><br>
 -<font size="4"><i>El Perro del Hortelano</i></font>, de Lope de Vega. Maravillosa obra filos&oacute;fica en lo amoroso y amorosa en lo filos&oacute;fico. Es inevitable pensar en la fiel pel&iacute;cula que hizo Pilar Mir&oacute;. El final, como casi siempre en Lope, me parece algo precipitado. Pero el lirismo vuela a alturas incre&iacute;bles. (<a href="http://www.cervantesvirtual.com/obra-visor/el-perro-del-hortelano--0/html/" target=_blank>L&eacute;ela</a> en html).<br><br>
 -<font size="4"><i>Fuenteovejuna</i></font>, de Lope de Vega. Aunque es archifamosa nunca antes la hab&iacute;a le&iacute;do, y no me ha decepcionado. Me ha parecido muy contempor&aacute;nea, al menos en potencia, pues los que hoy en d&iacute;a gobiernan nos est&aacute;n inflando las narices y pueden acabar como el Comendador. Me ha parecido que tiene cierta relaci&oacute;n con <i>Las Bacantes</i> de Eur&iacute;pides, m&aacute;s que nada por el linchamiento (por decirlo de forma suave) colectivo. Tambi&eacute;n me ha parecido curioso que no se diga el t&oacute;pico de "Fuenteovejuna, todos a una". Esto es como lo de "T&oacute;cala otra vez, Sam, en <i>Casablanca</i>... (<a href="http://bib.cervantesvirtual.com/servlet/SirveObras/07683847377875633905302/index.htm" target=_blank>Enlace</a> al html de la obra)." <br><br>
-</ul><!2012>
 <br><br>
 <!-- *****books_2012*********}}} --> 
 
