--- a/files/meditaccion.html
+++ b/files/meditaccion.html
@@ -2,14 +2,12 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<link rel="stylesheet" type="text/css" href="../../css.css" media="screen" title="aleix" />
+<link rel="stylesheet" type="text/css" href="../css.css" media="screen" title="aleix" />
 </head>
 <body>
 
 
-<!****************************************************************************************************************************************************>
-<a id="medit_0001" href="#last" onclick="toggle('meditaccion_0001')"><h5>Introducción</h5></a>
-              	<ul id="meditaccion_0001" style="display:none">
+<h5>Introducción</h5></a>
 
 Las londinesas acuñaron el término 'smog' para referirse a un humo (smoke) persistente que acaba formando una especie de niebla (fog). La palabra
 persistió igual que el fenómeno al cual hacía referencia. Era un problema nuevo que necesitaba un vocablo nuevo. <br><br>
@@ -56,8 +54,6 @@ Zona 3: acción-acción	---> Excelencia  <br><br>
 
 
 
-<br></ul><!meditaccion_0001>
-<!****************************************************************************************************************************************************>
 
 </body>
 </html>
