--- a/index.html
+++ b/index.html
@@ -4,200 +4,32 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>
-you@aleix_alva:~$
-</title>
-<meta name="author" content="aleix"/>
-<link rel="stylesheet" type="text/css" href="css.css" media="screen" title="aleix" />
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-<!*****mobile or desktop**********{{{>
-<style type="text/css">
- .mobileHide { display: inline;}
- /* Smartphone Portrait and Landscape */
-  @media only screen
-  and (min-device-width : 320px)
-  and (max-device-width : 480px){  .mobileHide { display: none;}}
-</style>
-<style type="text/css">
-   .mobileShow { display: none;}
-   /* Smartphone Portrait and Landscape */
-   @media only screen
-   and (min-device-width : 320px)
-   and (max-device-width : 480px){ .mobileShow { display: inline;}}
-</style>
-<!*****mobile or desktop*********}}}> 
+<title>you@aleix_alva:~$</title>
+<meta name="author" content="aleix_alva"/>
+<link rel="stylesheet" type="text/css" href="css.css" media="screen"  />
 </head>
 <!*****HEADERS*********}}}> 
 <body>
 <!*****quotation**********{{{>
-<small>page of aleix alva, citizen of the cosmos</small><br><br>
+page of aleix alva, citizen of the cosmos<br><br>
 <!*****quotation*********}}}> 
 <!*****current comic**********{{{>
 <a  href="http://www.lawebdefisica.com/humor/tiras" target=_blank>
-<img src="https://www.lawebdefisica.com/humor/tiras/comic/c347ea60181b53d25ea54e78f9ea2040731be701.gif" title="evolove" width=500></a>
+<img alt="[latest comic]" src="https://www.lawebdefisica.com/humor/tiras/comic/c347ea60181b53d25ea54e78f9ea2040731be701.gif" title="evolove" width=500></a>
 <!*****current comic*********}}}> 
-<!*****home-root**********{{{>
-<ul><!raiz>
-<h1><a href="index.html#last" onclick="toggle('node1')">home</a></h1>
-    <ul id="node1" style="display:none"><!home>
-<!*****blog**********{{{>
-<h2><a id="id_node_blog" href="index.html#last" onclick="toggle('node_blog')">blog</a></h2><!blog>
-<ul id="node_blog" style="display:none">
-<h3><a href='/blog/8' target=_blank>8. prime contact </a></h3>
-<h3><a href='/blog/7' target=_blank>7. mr. robot </a></h3>
-<h3><a href='/blog/6' target=_blank>6. la oca asesina</a></h3>
-<h3><a href='/blog/5' target=_blank>5. the r0oT experiment</a></h3>
-<h3><a href='/blog/4' target=_blank>4. old recordings</a></h3>
-<h3><a href='/blog/3' target=_blank>3. freedom</a></h3>
-<h3><a href='/blog/2' target=_blank>2. speed school</a></h3>
-<h3><a href='/blog/1' target=_blank>1. a new hope</a></h3>
- </ul><!blog>
-<!*****blog*********}}}> 
-<!*****littleatura**********{{{>
-<h2><a href="littleatura/index.html" target=_blank>littleatura</a></h2>
-<!*****littleatura*********}}}> 
-<!*****importunate permutation**********{{{>
-<h2><a id="id_short" href="index.html#last" onclick="toggle('short')">importunate permutation</a></h2>
-<ul id="short" style="display:none">
-plan A: opus<br>
-plan B: opos<br><br>
-Camarón, el Monarca<br><br>
-The pets fart. Fart de pets.<br><br>
-tetris triste<br><br>
-Don King Kong<br><br>
-h interchalada<br><br>
-mi papásito lindo<br><br>
-paràsits i maràsits<br><br>
-do me a flavor, please<br><br>
-Calfred Hitchcock<br><br>
-mathematics for the asthmatic me<br><br>
-em puja la tremperatura<br><br>
-me pone un poco nerviosísima<br><br>
-fired &amp; fried<br><br>
-el piano està desafiant<br><br>
-con pero es peor<br><br>
-soy ovnívoro<br><br>
-inflavalorarse<br><br>
-llocs de paraules<br><br>
-ancestries resistance<br><br>
-souvenir del universo<br><br>
-tocata para violador en la menor<br><br>
-luce la célula<br><br>
-tic toc<br><br>
-lo importante, tempranito<br><br>
-prender y pagar, aprender y apagar <br><br>
-meditacción<br><br>Fuga de becerros<br><br>fuerza azufre<br><br>City. Love. Velocity.<br><br>calzado alzado<br><br>libre ría<br><br>el juicio de perfumar<br><br>
-bella y bellaco<br><br>cara col<br><br>robas sabor<br><br>sanar ranas<br><br>pagès a la gespa<br><br>educar cuerda<br><br>
-silencio sin cielo<br><br>adiós, diosa<br><br>trol con control<br><br>ávida dádiva<br><br>la mari posa de mariposa<br><br>
-una idea lista<br><br>severo revés<br><br>eptagerado<br><br>cuatristeza<br><br>dodecadente<br><br>Bachatas de Kant<br><br>
-contra tradiciones con contradicciones<br><br>
-romance en menorca<br><br>laúd dual<br><br>manage man age<br><br>lámina animal<br><br>aula J<br><br>damnmad<br><br>luzazul<br><br>research, H careers<br><br>
-
-en boca cerrada no entran mosqueos<br><br>doom mood<br><br>dogma I: I am god<br><br>emit time<br><br>publication, a politic bun<br><br>Thinking thin, King thinking<br><br>
-Meditation, dominate it<br><br>roce cero<br><br>Genetically Modified Opinion<br><br>leg gel<br><br>anula la luna<br><br>raw war<br><br>
-democracy, a comedy arc<br><br>Untied Kingdom<br><br>Un Reino ido<br><br>Noche de prestado (23/6)<br><br>☉ verano averno<br><br>June lost ices (21/6)<br><br>
-enlarge relativity<br><br>lab log warming<br><br>propaganda rectal leo<br><br>pagando rap electoral<br><br>qiq<br><br>cliché en la mente, chicle en la boca<br><br>
-mi tamiz, mi matiz<br><br>exit any anxiety<br><br>me desmayo (01/05)<br><br>Libar en Abril ❀✿<br><br>Hated Death †<br><br>license to silence<br><br>march with charm<br><br>
-a pale year<br><br>Osama os ama<br><br>I am a spicy shit<br><br>varios ovarios<br><br>orfebre feliz (01/02)<br><br>quantum mischance<br><br>special, yet trivial, relativity<br><br>
-job sees tv<br><br>Palpatine was anti-Apple<br><br>ceremonia de virus atendí<br><br>auto de terminación<br><br>id en pendencia<br><br>olor, color, dolor<br><br>
-Stephen Hawking Knew Phase Thing<br><br>argentinos ignorantes<br><br>banned ruler, nebular nerd, learn burden<br><br>ignora Girona<br><br>Barcelona, león cabra y carne loba<br><br>
-cablearon Barcelona<br><br>poetry to prey<br><br>ser... o no res...<br><br>jarabes en rebajas<br><br>los 3 seremos gay<br><br>nρ<br><br>eco vs ceo<br><br>
-geo vs ego<br><br>argennegra<br><br>latent talent<br><br>The Undue Babel ♫<br><br>wore no teeth, wore no teeth ♫<br><br>went-here-too, went-here-too ♫<br><br>
-he-wrote-note he-wrote-note ♫<br><br>Strauss. Stars. Us.<br><br>El Buda Alunizó<br><br>añoro antaño<br><br>Febril Ano Huevo<br><br>Niño da Fe en Fin de Año<br><br>
-Happy we yearn!<br><br>December the thirstieth<br><br>Los Tacones Intensos #28D<br><br>Los Cantos Sostienen #28D<br><br>Los Tonos Incesantes #28D<br><br>
-feel the field<br><br>casual ants are coming to town! ♫<br><br>Merry Christmas to Ms. Myths Carrier, Mr Creamy Shirts and Mr. Mystic Sharer!<br><br>
-Us desitjo un Anal Bond amb els vostres estimats, i que Don Banal us porti moltes coses.<br><br>
--Feliz Vanidad ;) -Inflad Avidez :*<br><br>Perseguir el gordo. Huir del ogro.<br><br>¡Pedrisente, pedrisente! #20D<br><br>Derechos vs derechas. #20D<br><br>
-Tomen daca, nata comed, tomad acné, matan cedo.<br><br>Señorita Escarlata. Señora Escarlatina.<br><br>-Yo soy más de vilo. -Yo de certeza.<br><br>
-wolf flow<br><br>own my own ♫<br><br>
-<br><br>
-</ul><!short>
-<!*****importunate permutation*********}}}> 
-<!*****readings**********{{{>
-<h2> <a id="id_readings" href="index.html#last" onclick="toggle('readings')"> book log</a></h2>
-<!entry_readings><ul id="readings" style="display:none"><br>
-<script type="text/javascript"> $("#id_readings").click(function(){$("#readings").load("files/books.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-</ul><!readings>
-<!*****readings*********}}}> 
-<!*****music-log**********{{{>
-<h2><a id="id_music" href="index.html#last" onclick="toggle('music')">music</a></h2><!music><ul id="music" style="display:none">
-<!music><ul id="music" style="display:none"><br>
-<script type="text/javascript"> $("#id_music").click(function(){$("#music").load("files/music.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-<br><br> </ul><!music>
-
- </ul><!music>
-<!*****music-log*********}}}> 
-<!*****meditacción**********{{{>
-<h2><a id="id_meditaccion" href="index.html#last" onclick="toggle('meditaccion')">meditacción</a></h2><!meditaccion><ul id="meditaccion" style="display:none">
-<!meditaccion><ul id="meditaccion" style="display:none"><br>
-<script type="text/javascript"> $("#id_meditaccion").click(function(){$("#meditaccion").load("files/meditaccion.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-<br><br> </ul><!meditaccion>
-</ul><!meditaccion>
-<!*****meditacción*********}}}> 
-<!*****teaching**********{{{>
-<h2> <a id="id_teaching" href="index.html#last" onclick="toggle('teaching')"> teaching</a></h2>
-<ul id="teaching" style="display:none">
-<!*****statics-course**********{{{>
-<a href="https://al-al-physics.github.io/statics/" target=_blank > <h3>an introduction to statics for engineers</h3></a>
-<!*****statics-course*********}}}> 
-</ul><!teaching>
-<!*****teaching*********}}}> 
-<!*****contact**********{{{>
-<h2><a href="index.html#last" onclick="toggle('node_contact')">
-      contact</a></h2>
-      <ul id="node_contact" style="display:none"><br>
-        my email address is<br><br>
-       <img src="files/email.png" width=150>  
-        <br><br>        
-       you can also send me a PGP encrypted email by using my <a href="files/al-al_pubkey.txt" target=_blank>public key</a>
- </ul><!contact>   
-<!*****contact*********}}}> 
- </ul><!home>
-</ul><!raiz>
+<h2><a href="/blog/index.html" >blog</a></h2>
+<h2><a href="/littleatura/index.html" >littleatura</a></h2>
+<h2><a href="/files/permutation.html" >importunate permutation</a></h2>
+<h2> <a href="/files/books.html"> book log</a></h2>
+<h2><a href="/music/index.html" >music</a>
+<h2><a href="/files/meditaccion.html" >meditacción</a></h2>
+<h2><a href="/files/contact.html">contact</a></h2>
 <br><br><br><br><br>
 <!*****home-root*********}}}> 
 <!*****footer**********{{{>
 <br><br>
 <center><small>Powered by <a href="http://www.lawebdefisica.com" target=_blank>La web de F&iacute;sica</a></small></center>
 <!*****footer*********}}}> 
-<!*****photos**********{{{>
-<!br><!br><!h2>
-<!<a href="https://www.instagram.com/meditaction" target=_blank>
-<!<img src="files/icon.png" title="instagram"><!/a><!/h2>
-<!*****photos*********}}}> 
-<!*****expand-collapse code**********{{{>
-
-
-<!Code to expand/collapse branches>
-<script type="text/javascript">
-function toggle(id) {
-  var e = document.getElementById(id);
-
-  if (e.style.display == '')
-    e.style.display = 'none';
-  else
-    e.style.display = '';
-}
-
-function toggle2(id, link) {
-  var e = document.getElementById(id);
-
-  if (e.style.display == '') {
-    e.style.display = 'none';
-    link.innerHTML = 'Expand';
-  } else {
-    e.style.display = '';
-    link.innerHTML = 'Collapse';
-  }
-}
-
-</script>
-<!*****expand-collapse code*********}}}> 
 </body>
 </html>
 
