--- a/files/contact.html
+++ b/files/contact.html
@@ -14,9 +14,9 @@ you@aleix_alva:~$
 <body>
 
 my email and xmpp address is<br><br>
-fluxion [at] monocles.de
+aleix [at] monocles.de
 <br><br>        
-you can also send me to al-al [at] tutanota.com a PGP encrypted email by using my <a href="/files/al-al.public_pgp" target=_blank>public key</a>
+you can also send me an encrypted email by using my <a href="/files/aleix_alva.gpg" download><u>public key</u></a>
 <br><br>
 
 
