--- a/files/books.html
+++ b/files/books.html
@@ -22,6 +22,8 @@
 <a href="#2012">2012</a>
 <!-- *****books_2020**********{{{ -->
 <h4><a id="2020" >2020</a></h4>
+-<font size="4"><i> Caballito Loco/Carnavalito</i></font>, de Ana María Matute <br><br>
+-<font size="4"><i> Óscar y los hombres rana</i></font>, de Carmen Kurtz<br><br>
 -<font size="4"><i> A mathematician's lament</i></font>, by Paul Lockhart (book)<br><br>
 -<font size="4"><i> De vita beata</i></font>, de Séneca<br><br>
 -<font size="4"><i> The Black Swan</i></font>, by Nassim Nicholas Taleb<br><br>
